--- a/public/index.html
+++ b/public/index.html
@@ -12,16 +12,17 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="My name is Rafay Farrukh. I’m a graduate of 2020 from National University of Sciences and Technology at Islamabad with a degree in Computer Engineering. I'm most passionate about giving back to the community, and my goal is to pursue this passion within the field of software engineering. In my free time I like working on open source projects."
+      content="My name is Rafay Farrukh. I graduated in 2023 from Comsats University Islamabad with a degree in Computer Science. I am an experienced JavaScript developer with over two years of experience in web development. I am skilled in cross-technologies and data management, and proficient in ReactJS, Node.js, Express.js, MySQL, MongoDB, Next.js, and React Native. I stay up-to-date with the latest web development trends and maintain a positive attitude. In my free time, I enjoy working on open source projects."
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    <meta property="og:title" content="Rafay Farrukh - Portfolio" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <meta property="twitter:image" content="%PUBLIC_URL%/social-image.png" />
-    <meta property="og:image" content="%PUBLIC_URL%/social-image.png" />
+    <meta property="twitter:image" content="%PUBLIC_URL%/social.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/social.png" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
